re PR fortran/29403 ([4.1 only] print ('(a)') not working, print '(a) works)

2006-10-15  Steven G. Kargl  <kargl@gcc.gnu.org>
 
    PR fortran/29403
    * io.c (match_io):  Check for a default-char-expr for PRINT format.

	* gfortran.dg/print_1.f90: New test.

From-SVN: r117789